# css-purify

./: Cargo.toml  LICENSE  README.md
src/: DeduplicatedSelectorsExt.rs  FindHtmlElementsMatchingCssSelector.rs  HasCssRulesExt.rs  MinifyingHtmlSerializer.rs  MinifyingHtmlSerializerStackItem.rs  NodeExt.rs  PreprocessedHtml5ElementWrappingNode.rs  PurifyError.rs  QualNameExt.rs  RcDomExt.rs  UltraMinifyingHtmlSerializer.rs  VecExt.rs  lib.rs
